assets/css/style.css
*{
  background-color: black;
  font-family: 'Montserrat', sans-serif;
  color: white;
}
.logo{
  width: 80%;
  height: 80%;
  position: relative;
  left:10px;
  
}
.title{
  font-size: 220%;
  font-weight: 100;
  margin: 0 0;
  position: relative;
  top:-16px;
  left:-20px;
}
nav{
  display: flex;
  align-items: center;
  justify-content: space-between;

}
nav ul li{
  list-style: none;
  display: inline-block;
  color: white;
  padding: 10px 10px;
  font-size: 80%;
  position: relative;
  right: 40px;
}
.btn1{
  width: 10.5em;
  height: 3em;
  border-radius: 30em;
  font-size: 13px;
  font-weight: 300;
  font-family: inherit;
  background-color: #000000;
  color: #f1ffa2;
  border: solid 1px #f1ffa2;
  position: relative;
  right: 30px;
  z-index: 1;
}
.btn2{
  margin: 10px;
  width: 95px;
  height: 40px;
  border-radius: 30em;
  font-size: 13px;
  font-weight: 600;
  font-family: inherit;
  background-color: #f1ffa2;
  color: black;
  border: none;
  position: relative;
  right: 30px;
  z-index: 1;
}
section{
  margin: 6%;
  margin-top: -2%;
}
.section-heading-para{
  font-size: 350%;
  width:60%;
}
.comma-clr{
  color:#f1ffa2;
}
section i{
  color: rgb(136, 255, 136);
}
.GrownVertically{
  font-weight: 800;
}
.UrbanAreas{
  background-color: #f1ffa2;
  font-weight: bolder;
  color: #000000;
  padding-right: 1%;
  padding-left: 1%;
}
.section-para{
  font-size: 15px;
  width: 52%;
}
section img{
  width: 45px;
  height: 45px;
  border-radius: 50px;
  position: relative;
  border: solid 1.5px black;
  top:20px;
}
.p1{
  z-index: 0;
  left: 50px;

}
.p2{
  z-index: 1;
  left: 35px;

}
.p3{
  z-index: 2;
  left: 20px;

}
.PrsBoxOne{
  padding-left: 0;
  padding-top: 2% ;
  padding-bottom: 2%;
  padding-right: 17%;
  background-color: #e1f2c1;
  border-radius :15px;
  border: none;
}
.NumOne{
  background-color: #ffffff;
  color: black;
  height: 20%;
  padding: 5% 8%;
  border-radius: 100%;
  border: solid .5px #000000;
  position: relative;
  top:7px;
}
.PrsBoxOneHeading{
  background-color: #e1f2c1;
  color: #000000;
  font-size: 90%;
  font-weight: 600;
  position: relative;
  left:4%;
  top:-3px;
}
.PrsBoxOnePara{
  background-color: #e1f2c1;
  color: #000000;
  font-size: 70%;
  font-weight: 100;
  position: relative;
  left: 32%;
}

.PrsBoxTwo{
  padding-left: 0;
  padding-top: 2% ;
  padding-bottom: 2%;
  padding-right: 17%;
  background-color: #e1f2c1;
  border-radius :15px;
  border: none;
}
.NumTwo{
  background-color: #ffffff;
  color: black;
  height: 20%;
  padding: 5% 8%;
  border-radius: 100%;
  border: solid .5px #000000;
  position: relative;
  top:7px;
}
.PrsBoxTwoHeading{
  background-color: #e1f2c1;
  color: #000000;
  font-size: 90%;
  font-weight: 600;
  position: relative;
  left:4%;
  top:-3px;
}
.PrsBoxTwoPara{
  background-color: #e1f2c1;
  color: #000000;
  font-size: 70%;
  font-weight: 100;
  position: relative;
  left: 32%;
}

.PrsBoxThree{
  padding-left: 0;
  padding-top: 2% ;
  padding-bottom: 2%;
  padding-right: 17%;
  background-color: #e1f2c1;
  border-radius :15px;
  border: none;
}
.NumThree{
  background-color: #ffffff;
  color: black;
  height: 20%;
  padding: 5% 8%;
  border-radius: 100%;
  border: solid .5px #000000;
  position: relative;
  top:7px;
}
.PrsBoxThreeHeading{
  background-color: #e1f2c1;
  color: #000000;
  font-size: 90%;
  font-weight: 600;
  position: relative;
  left:4%;
  top:-3px;
}
.PrsBoxThreePara{
  background-color: #e1f2c1;
  color: #000000;
  font-size: 70%;
  font-weight: 100;
  position: relative;
  left: 32%;
}
.btn-StartNow{
  width: 9em;
  height: 3em;
  border-radius: 30em;
  font-size: 13px;
  font-weight: 600;
  font-family: inherit;
  background-color: #f1ffa2;
  color: black;
  border: none;
  position: relative;
  overflow: hidden;
  z-index: 1;
}
.btn-HowItWorks{
  margin: 10px;
  width: 14%;
  height: 3em;
  border-radius: 30em;
  font-size: 13px;
  font-weight: 200;
  font-family: inherit;
  background-color: #000000;
  color: #e1f2c1;
  border: solid 1px #e1f2c1;
  position: relative;
  overflow: hidden;
  z-index: 1;
  
 }

footer{
  height: 140px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  color:black;
  background-color: white;
  

}
.FarmStartAt{
  width:13em;
  height: 4em;
  font-size: 12px;
  font-weight: 300;
  letter-spacing: -0.1px;
  background-color: #000000;
  color: rgb(255, 255, 255);
  border: solid 1px black;
  position: relative;
  left: 75px;
}
.SevenAM{
  padding: 6px 6px;
  border-radius: 90px;
  font-size: 10px;
  background-color: #ffffff;
  color: rgb(0, 0, 0);
  font-weight: 600;
  position: relative;
  left: 3px;
}
.bottomleaf{
  position: relative;
  left: 62px;
  height: 48px;
  width: 48px;
}

footer ul{
  background-color: white;
}
footer ul li{
  list-style: none;
  display: inline-block;
  color: white;
  padding: 10px 10px;
  background-color: white;
}
.footer-paragraph{
  width: 22%;
  margin-left: 100px;
  font-size:18px;
  color:black;
  background-color: white;
  font-weight: 600;
}

footer button{
  width: 110px;
  height: 40px;
  border-radius: 30em;
  font-size: 11px;
  font-weight: 600;
  font-family: inherit;
  background-color: #f1ffa2;
  color: black;
  border: solid 1px black;
}
.DontWait{
  position: relative;
  z-index: 2;
  

}
.JoinUs{
  background-color: #e5e8fe;
  margin: -40px;
  /* z-index:4; */
  padding-right:0px;
  padding-left:14%;
  position: relative;
  z-index: 1;
  left:-10px;
}
.ActNow{
  background-color: #fcecbe;
  /* z-index: 2; */
  padding-left: 9%;
  padding-right: 0px;
  position: relative;
  z-index:0;
  left:-10px;
}
.ContactTeam{
  width: 130px;
  height: 40px;
  border-radius: 30em;
  font-size: 12px;
  font-weight: 500;
  background-color: #ffffff;
  color: rgb(0, 0, 0);
  border: solid 1px rgb(0, 0, 0);
  position: relative;
  overflow: hidden;
  z-index: 1;
}
footer img{
  width: 35px;
  height: 35px;
  border-radius: 50px;
  position: relative;
  border: solid 1px black;
  object-fit: cover;
}
.con1{
  z-index: 2;
 left: 70px;

}
.con2{
  z-index: 1;
  left:10px;

}
.con3{
  z-index: 0;
  left: -45px;

}

